src/test/resources/frontendReference/invalid/semanticErr/class/inheritance/cyclicSuperclassSimple.waccast
-- Compiling...
Errors detected during compilation! Exit code 200 returned.
Semantic Error at 12:2 -- Cyclic inheritance detected for class d
Semantic Error at 14:2 -- Cyclic inheritance detected for class e
Semantic Error at 16:2 -- Cyclic inheritance detected for class f
